# pydk-applications

./: .gitignore  README.md  TODO.txt  build.sh  make.sh  new.sh  run.sh  sync_from_pydk.sh  template.sh
org.panda3d.samples/assets/Applications/: ControlChannel.py  MainActivity.py  __init__.py  geom3d.py
prebuilt/wasm/: python.js
pydk/prebuilt/armeabi-v7a/pycopy/: Python.h
pydk/prebuilt/armeabi-v7a/wapy/: Python.h
pydk/sources.py/patches.wasm-38/python3.8/: socket.py
pydk/sources.py/patches.wasm-38/python3.8/asyncio/: __init__.py  listactor_events.py
pydk/sources.py/patches.wasm-38/python3.8/direct/showbase/: ShowBase.py
pydk/sources.py/patches.wasm-38/python3.8/direct/task/: Task.py
pythons/: requirements.txt
pythons/fixes/: __init__.py  contextvars.py  machine.py  micropython.py  utime.py
pythons/js/: __main__.py
src/org.beerware.wapy/Applications/: MainActivity.py
themes/wasm-none/{{ cookiecutter.formal_name }}/app/src/main/res/: activity_main.xml
themes/wasm-none/{{ cookiecutter.formal_name }}/app/src/main/res/layout/: activity_main.html
wapy-android/: CONTRIBUTING.md  README.rst  cookiecutter.json
wapy-android/{{ cookiecutter.formal_name }}/: build.gradle  settings.gradle
wapy-android/{{ cookiecutter.formal_name }}/app/: build.gradle  build.gradle.minimal
wapy-android/{{ cookiecutter.formal_name }}/app/src/main/: AndroidManifest.xml
wapy-android/{{ cookiecutter.formal_name }}/app/src/main/cpp/: CMakeLists.txt  ioredir.c  logger.h  mod_egl.c  mod_egl.cpp  mod_egl.h  mod_embed.c  pythonsupport.c  rmipython.c
wapy-android/{{ cookiecutter.formal_name }}/app/src/main/java/{{ cookiecutter.bundle }}.{{ cookiecutter.module_name }}/: JavaSpace.java  JniHandler.java  MainActivity.java
wapy-android/{{ cookiecutter.formal_name }}/assets/Applications/: README
wapy-android/{{ cookiecutter.formal_name }}/gradle/wrapper/: gradle-wrapper.properties
